[gd_scene load_steps=32 format=2]

[ext_resource path="res://images/background.png" type="Texture" id=1]
[ext_resource path="res://ImpPiano.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/reference.png" type="Texture" id=3]
[ext_resource path="res://ImpCake.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/pogo_base.png" type="Texture" id=5]
[ext_resource path="res://PogoSpring.tscn" type="PackedScene" id=6]
[ext_resource path="res://ImpPogo.tscn" type="PackedScene" id=7]
[ext_resource path="res://Harlequin (Rock Version).mp3" type="AudioStream" id=8]
[ext_resource path="res://Game.gd" type="Script" id=9]
[ext_resource path="res://GiddyUp.tscn" type="PackedScene" id=10]
[ext_resource path="res://images/backyardSwing.png" type="Texture" id=11]
[ext_resource path="res://fonts/Courier New, Bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://images/reference2.png" type="Texture" id=13]
[ext_resource path="res://images/arrowpad.png" type="Texture" id=14]
[ext_resource path="res://images/controls.png" type="Texture" id=15]
[ext_resource path="res://ui/Volume Button/VolumeButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://images/arrow_spritesheet.png" type="Texture" id=17]
[ext_resource path="res://Leaderboard.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 12 )

[sub_resource type="Theme" id=2]
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/fonts/font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
extra_spacing_space = -7
font_data = ExtResource( 12 )

[sub_resource type="Theme" id=4]
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/fonts/font = SubResource( 3 )

[sub_resource type="CircleShape2D" id=5]
radius = 42.0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 25, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 17 )
region = Rect2( 25, 0, 25, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 17 )
region = Rect2( 50, 0, 25, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 17 )
region = Rect2( 75, 0, 25, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 17 )
region = Rect2( 100, 0, 25, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 17 )
region = Rect2( 125, 0, 25, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 17 )
region = Rect2( 150, 0, 25, 24 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 9 )

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Harlequin ROCK" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ImpPiano" parent="." instance=ExtResource( 2 )]
position = Vector2( 466, 199 )

[node name="PogoBase" type="Sprite" parent="."]
position = Vector2( 127, 306 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Boy" type="Node2D" parent="."]
position = Vector2( 153, 311 )

[node name="Ride2" type="Node2D" parent="."]
visible = false
position = Vector2( 153, 311 )

[node name="Ride" type="Node2D" parent="."]
position = Vector2( 153, 311 )

[node name="PogoSpring" parent="Ride" instance=ExtResource( 6 )]

[node name="ImpPogo" parent="Ride" instance=ExtResource( 7 )]

[node name="ImpCake" parent="." instance=ExtResource( 4 )]
position = Vector2( 241, 229 )
frame = 0

[node name="BackyardSwing" type="Sprite" parent="."]
position = Vector2( 530, 699 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Score" type="Label" parent="."]
margin_left = 96.0
margin_top = 334.0
margin_right = 255.0
margin_bottom = 362.0
theme = SubResource( 2 )
text = "000000000"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TimeLeft" type="Label" parent="."]
margin_left = 98.0
margin_top = 372.0
margin_right = 257.0
margin_bottom = 407.0
theme = SubResource( 4 )
text = "Time 29"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GiddyUp" parent="." instance=ExtResource( 10 )]
margin_left = 73.0
margin_top = 366.0
margin_right = 241.0
margin_bottom = 409.0

[node name="Reference" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.360784 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Reference2" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.380392 )
texture = ExtResource( 13 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Up" type="TouchScreenButton" parent="HUD"]
position = Vector2( 490, 265 )
normal = ExtResource( 14 )
pressed = ExtResource( 14 )
shape = SubResource( 5 )
action = "ui_up"
visibility_mode = 1

[node name="Down" type="TouchScreenButton" parent="HUD"]
position = Vector2( 573, 436 )
rotation = 3.14159
normal = ExtResource( 14 )
pressed = ExtResource( 14 )
shape = SubResource( 5 )
action = "ui_down"
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="HUD"]
position = Vector2( 415, 392 )
rotation = -1.5708
normal = ExtResource( 14 )
pressed = ExtResource( 14 )
shape = SubResource( 5 )
action = "ui_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="HUD"]
position = Vector2( 648, 309 )
rotation = 1.5708
normal = ExtResource( 14 )
pressed = ExtResource( 14 )
shape = SubResource( 5 )
action = "ui_right"
visibility_mode = 1

[node name="Controls" type="TextureButton" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -62.0
margin_top = 10.0
margin_right = -6.0
margin_bottom = 37.0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 15 )

[node name="ClickHere" type="AnimatedSprite" parent="HUD/Controls"]
position = Vector2( -32, 0 )
frames = SubResource( 13 )
playing = true
centered = false

[node name="Volume" parent="HUD" instance=ExtResource( 16 )]
margin_left = 5.0
margin_top = 4.0
margin_right = 30.0
margin_bottom = 29.0

[node name="Leaderboard" parent="HUD" instance=ExtResource( 18 )]
visible = false

[connection signal="pressed" from="GiddyUp" to="." method="_on_GiddyUp_pressed"]
[connection signal="timeout" from="Timer" to="." method="final"]
[connection signal="pressed" from="HUD/Controls" to="." method="_on_Controls_pressed"]
